--- a/includes/special.css
+++ b/includes/special.css
@@ -1,4 +1,16 @@
-.special-weatherforecast-table td{
-    text-align: center;
-    vertical-align: middle;
+
+.special-weatherforecast-table {
+    position: relative;
+    width: 100%;
+}
+
+.special-weatherforecast-table th {
+    background-color: #ffffff;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+  }
+
+.special-weatherforecast-table tr:nth-child(odd) td{
+    background-color: #12396c30;
 }
